crear insert de empresa y refactorizacion de codigo